2010-04-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use Event in EpollEventPoll
	* src/EpollEventPoll.cc
	* src/EpollEventPoll.h

2010-04-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Externalized Event, CommandEvent, ADNSEvent, SocketEntry and
	AsyncNameResolverEntry class.
	* src/Event.h
	* src/Makefile.am
	* src/PollEventPoll.cc
	* src/PollEventPoll.h

2010-04-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Supported poll() for socket event notification.  --event-poll can
	take value "poll". Fixed the bug that timeout for
	SocketCore::isReadable()/isWritable() is ignored when epoll is
	used.
	* src/OptionHandlerFactory.cc
	* src/a2io.h
	* src/prefs.h
	* src/SocketCore.h
	* src/Makefile.am
	* src/main.cc
	* src/PollEventPoll.h
	* src/SocketCore.cc
	* src/DownloadEngineFactory.cc
	* src/PollEventPoll.cc
	* src/prefs.cc
	* configure.ac

2010-04-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reverted previous change to DownloadCommand.cc with additional
	commentary.
	* src/DownloadCommand.cc

2010-04-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with openssl 1.1.0 and mingw32.
	* src/AsyncNameResolver.cc
	* src/LogFactory.cc
	* src/Logger.cc
	* src/Logger.h
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/a2netcompat.h

2010-04-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.9.1

2010-04-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.9.0
	* doc/aria2c.1.txt

2010-04-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Ukrainian, Russian, Simplified Chinese, German and Greek
	translation. Thanks to all translators.
	* po/de.po
	* po/el.po
	* po/ru.po
	* po/uk.po
	* po/zh_CN.po

2010-04-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added AC_SEARCH_LIBS for inet_aton on opensolaris.  opensolaris
	needs -lnsl for inet_aton.
	* configure.ac
